# ai_db

./: .gitignore  bootstrap.sh  databricks.yml  deploy.sh  pyproject.toml
config/: bronze_ingestion.json
jobs/: bronze_job.yml
jobs/gold/: manual_table_registry.yml  run_gold_mv.yml
resources/: one_time_date_pipeline.yml  schema_n_volume.yml  silver_pipelines.yml
resources/jobs/: bronze_job.yml
resources/jobs/gold/: run_gold_mv.yml
resources/jobs/silver/: silver_fact_group_pipeline_job.yml
resources/pipelines/: one_time_date_pipeline.yml  schema_n_volume.yml
resources/pipelines/silver/: silver_pipelines.yml
src/bronze/pipelines/: ingest_bronze.py
src/gold/pipelines/: execute_gold_mv.py  get_active_gold_tables.py  get_active_gold_tables_old.py
src/gold/sql/: claim_quality_summary.sql  drug_utilization_summary.sql  member_spend_summary.sql  plan_financial_summary.sql  prescriber_performance_summary.sql
src/gold/transform/: register_gold_table_properties.py
src/silver/pipelines/: generate_date.py  pipeline_claim_group.py
src/silver/transform/: transform_dim.py  transform_fact.py
src/sql/schemas/bronze/: schema.sql
src/sql/schemas/silver/: claim_schema.sql
src/utils/: dim_data_generator.py  fact_event.py
tests/: conftest.py  test_transform_dim_drug.py
