[tool.poetry]
name = "ai_db"
version = "0.1.0"
description = "Databricks transform project"
authors = ["Mukesh Singh <mukesh.singh@globant.com>"]

[tool.poetry.dependencies]
python = "^3.11"

# Core dependency

# Faker for data generation
faker = "^40.12.0"

# Local shared package (editable for dev)
common_utils = {path = "../common_utils", develop = true}

[tool.poetry.group.dev.dependencies]
pyspark = "4.1.1"
delta-spark = "4.1.0"
pytest = "^8.0.0"
ruff = "^0.5.0"


[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"